# flare-engine

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  CMakeLists.txt  CREDITS.engine.txt  CREDITS.txt  Codingstyle.txt  INSTALL.engine  INSTALL.engine.md  INSTALL.md  README.engine  README.engine.md  README.md  RELEASE_NOTES.txt  YuanhuanZheng  astyle_flare.sh  cam  data.de.po  engine.de.po  engine.ru.po  extract_xml.sh  make_emscripten.sh  package_osx.sh  regenerate_wiki_attributepage.sh  wiki.xslt
.github/workflows/: main.yml
.tx/: config
cmake/: Copyright.txt  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  Findtensorflow.cmake
distribution/: appdata  create_release_tarball.sh  emscripten_template.html  flare.desktop.in  flare.man  nsis_script.nsi
distribution/emscripten/: make_emscripten.sh
distribution/linux/: flare.sh  package_steamrt.sh
distribution/macos/: Flare DMG Build Documentation.odt  README.txt  create_iconset.sh  flare.icns  flare.sh  package_osx.sh
distribution/windows/: itch.toml
docs/: attribute-reference.html  code-conventions.html  translations.html
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
flare-android-project/: .cproject  .project  AndroidManifest.xml  README.android  build.gradle  build.xml  gradle.properties  resolution.diff  settings.gradle
flare-android-project/app/: build.gradle
flare-android-project/app/src/main/: AndroidManifest.xml
flare-android-project/app/src/main/java/org/flare/app/: FLARE.java
flare-android-project/app/src/main/java/org/libsdl/app/: HIDDeviceManager.java  SDLActivity.java
flare-android-project/app/src/main/jni/: Application.mk
flare-android-project/app/src/main/jni/src/: Android.mk
flare-android-project/app/src/main/res/layout/: main.xml
flare-android-project/gradle/wrapper/: gradle-wrapper.properties
flare-android-project/jni/: Application.mk
flare-android-project/jni/src/: Android.mk  Android_static.mk  main.cpp
flare-android-project/res/layout/: downloader.xml  downloader_title.xml
flare-android-project/res/values/: strings.xml
flare-android-project/server/: download.xml  insert_comment.sh  note.txt  update.sh
flare-android-project/src/com/google/android/downloader/: DownloaderActivity.java  PreconditionActivityHelper.java
flare-android-project/src/org/flare/app/: DownloaderActivity.java  FLARE.java  PreconditionActivityHelper.java  SDLActivity.java
flare-android-project/src/org/libsdl/app/: SDLActivity.java
flare-ios-project/: Info.plist  README.md
flare-ios-project/FLARE.xcodeproj/: project.pbxproj
flare-ios-project/FLARE.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
flare-ios-project/FLARE.xcodeproj/project.xcworkspace/xcshareddata/: FLARE.xccheckout
flare-ios-project/FLARE.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/: UserInterfaceState.xcuserstate
flare-ios-project/FLARE.xcodeproj/xcuserdata/admin.xcuserdatad/xcschemes/: FLARE.xcscheme  xcschememanagement.plist
flare-ios-project/FLARE/Images.xcassets/LaunchImage.launchimage/: Contents.json
flare-ios-project/___PROJECTNAME___.xcodeproj/: project.pbxproj
mods/: mods.txt
mods/default/cutscenes/: credits.txt  credits_engine.txt  intro.txt
mods/default/engine/: classes.txt  combat.txt  combat_text.txt  damage_types.txt  default_music.txt  equip_flags.txt  font_settings.txt  icons.txt  languages.txt  primary_stats.txt  resolutions.txt  resource_stats.txt
mods/default/languages/: credits_settings.txt  data.be.po  data.bg.po  data.ca.po  data.cs.po  data.de.po  data.el.po  data.es.po  data.eu.po  data.fi.po  data.fr.po  data.gd.po  data.gl.po  data.he.po  data.hi_IN.po  data.hu.po  data.id.po  data.it.po  data.ja.po  data.ko.po  data.nb.po  data.nl.po  data.pl.po  data.pot  data.pt.po  data.pt_BR.po  data.ru.po  data.sk.po  data.sv.po  data.th_TH.po  data.uk.po  data.vi.po  data.zh.po  data.zh_TW.po  engine.be.po  engine.bg.po  engine.ca.po  engine.cs.po  engine.de.po  engine.el.po  (+30 more)
mods/default/menus/: config.txt  confirm.txt  fps.txt  gameload.txt  gamenew.txt  movement_type.txt
mods/fantasycore/languages/: data.ru.po
mods/fogofwar/: settings.txt
mods/fogofwar/engine/: misc.txt
mods/fogofwar/images/tilesets/: tileset_fogofwar.xcf
mods/fogofwar/tilesetdefs/: tileset_fogofwar.txt
mods/gcw0_defaults/: settings.txt
mods/gcw0_defaults/engine/: default_keybindings.txt  default_settings.txt
mods/opengl_shaders/: settings.txt
mods/opengl_shaders/shaders/: fragment.glsl  fragment_p.glsl  vertex.glsl  vertex_p.glsl
src/: AStarContainer.cpp  AStarContainer.h  AStarNode.cpp  AStarNode.h  Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h  AnimationMedia.cpp  AnimationMedia.h  AnimationSet.cpp  AnimationSet.h  Avatar.cpp  Avatar.h  BehaviorAlly.cpp  BehaviorAlly.h  BehaviorStandard.cpp  BehaviorStandard.h  BehaviorTF.cpp  BehaviorTF.h  Camera.cpp  Camera.h  CampaignManager.cpp  CampaignManager.h  CombatText.cpp  CombatText.h  CommonIncludes.h  CursorManager.cpp  CursorManager.h  DeviceList.cpp  DeviceList.h  EffectManager.cpp  EffectManager.h  Enemy.cpp  Enemy.h  EnemyBehavior.cpp  EnemyBehavior.h  EnemyGroupManager.cpp  EnemyGroupManager.h  EnemyManager.cpp  (+253 more)
src/api/: MapSaver.cpp  MapSaver.h
tools/localization/: regenerate_po.sh  transifex_progress.py  xgettext.py
